{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 340,
  "lineage": "8f542eb0-27de-c12c-fea6-28fe85dbf35c",
  "resources": [
    {
      "module": "module.Elastic_IP[\"eip-stratio-preprod-nat-prod-a\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fce59f824da5cd9",
            "association_id": "eipassoc-01a0b78c0eae5c993",
            "domain": "vpc",
            "id": "eipalloc-03fce59f824da5cd9",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0d6f7fee497d61ffc",
            "private_dns": "ip-10-120-205-29.eu-west-3.compute.internal",
            "private_ip": "10.120.205.29",
            "public_dns": "ec2-13-36-22-167.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.22.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-stratio-preprod-nat-prod-a"
            },
            "tags_all": {
              "Name": "eip-stratio-preprod-nat-prod-a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Internet_Gateway[\"igw-stratio-preprod\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:105054799343:internet-gateway/igw-0c7aea50f6634c9bc",
            "id": "igw-0c7aea50f6634c9bc",
            "owner_id": "105054799343",
            "tags": {
              "Name": "igw-stratio-preprod"
            },
            "tags_all": {
              "Name": "igw-stratio-preprod"
            },
            "vpc_id": "vpc-066ad9c6a0558e6e5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.NAT_Gateway[\"nat-stratio-preprod-pvt-a\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fce59f824da5cd9",
            "association_id": "eipassoc-01a0b78c0eae5c993",
            "connectivity_type": "public",
            "id": "nat-0d8bb5a6ad7a8e0d8",
            "network_interface_id": "eni-0d6f7fee497d61ffc",
            "private_ip": "10.120.205.29",
            "public_ip": "13.36.22.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0152a5f18b9dd311d",
            "tags": {
              "Name": "nat-stratio-preprod-pvt-a"
            },
            "tags_all": {
              "Name": "nat-stratio-preprod-pvt-a"
            }
          },
          "dependencies": [
            "module.Elastic_IP.aws_eip.this",
            "module.Public_Subnets.aws_subnet.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Private_Subnets[\"subnet-stratio-preprod-pvt-a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:105054799343:subnet/subnet-0aeb6413dbee5bd50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.120.204.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aeb6413dbee5bd50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-stratio-preprod-pvt-a"
            },
            "tags_all": {
              "Name": "subnet-stratio-preprod-pvt-a"
            },
            "vpc_id": "vpc-066ad9c6a0558e6e5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Private_Subnets[\"subnet-stratio-preprod-pvt-b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:105054799343:subnet/subnet-075903de08488b84b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.120.204.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075903de08488b84b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-stratio-preprod-pvt-b"
            },
            "tags_all": {
              "Name": "subnet-stratio-preprod-pvt-b"
            },
            "vpc_id": "vpc-066ad9c6a0558e6e5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Public_Subnets[\"subnet-stratio-preprod-pub-a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:105054799343:subnet/subnet-0152a5f18b9dd311d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.120.205.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0152a5f18b9dd311d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-stratio-preprod-pub-a"
            },
            "tags_all": {
              "Name": "subnet-stratio-preprod-pub-a"
            },
            "vpc_id": "vpc-066ad9c6a0558e6e5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Public_Subnets[\"subnet-stratio-preprod-pub-b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:105054799343:subnet/subnet-0f8fae2f53519d5b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.120.205.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8fae2f53519d5b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-stratio-preprod-pub-b"
            },
            "tags_all": {
              "Name": "subnet-stratio-preprod-pub-b"
            },
            "vpc_id": "vpc-066ad9c6a0558e6e5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Table[\"rtbl-stratio-preprod-pub-subnets\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:105054799343:route-table/rtb-0faa8712565ce4e85",
            "id": "rtb-0faa8712565ce4e85",
            "owner_id": "105054799343",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7aea50f6634c9bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtbl-stratio-preprod-pub-subnets"
            },
            "tags_all": {
              "Name": "rtbl-stratio-preprod-pub-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ad9c6a0558e6e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Table[\"rtbl-stratio-preprod-pvt-subnets\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:105054799343:route-table/rtb-056073e2b9b18c822",
            "id": "rtb-056073e2b9b18c822",
            "owner_id": "105054799343",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8bb5a6ad7a8e0d8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.110.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-0c4edf925782ce2de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtbl-stratio-preprod-pvt-subnets"
            },
            "tags_all": {
              "Name": "rtbl-stratio-preprod-pvt-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ad9c6a0558e6e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.SG-EKS[\"sg_eks_preprod_genia\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:105054799343:security-group/sg-09fc239353820f470",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fc239353820f470",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Security group Cluster EKS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240507074115228800000005",
            "name_prefix": "terraform-",
            "owner_id": "105054799343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_eks_preprod_genia"
            },
            "tags_all": {
              "Name": "sg_eks_preprod_genia"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ad9c6a0558e6e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC[\"vpc-stratio-preprod\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:105054799343:vpc/vpc-066ad9c6a0558e6e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.204.0/23",
            "default_network_acl_id": "acl-01e15ce134ef23018",
            "default_route_table_id": "rtb-0f4ebbfdcbe6de635",
            "default_security_group_id": "sg-0f562a10608557166",
            "dhcp_options_id": "dopt-92f135fb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066ad9c6a0558e6e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4ebbfdcbe6de635",
            "owner_id": "105054799343",
            "tags": {
              "Name": "vpc-stratio-preprod"
            },
            "tags_all": {
              "Name": "vpc-stratio-preprod"
            }
          }
        }
      ]
    },
    {
      "module": "module.private_routes[\"rtbl-stratio-preprod-pvt-subnets\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-056073e2b9b18c8221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d8bb5a6ad7a8e0d8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056073e2b9b18c822",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Elastic_IP.aws_eip.this",
            "module.NAT_Gateway.aws_nat_gateway.this",
            "module.Public_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_routes[\"rtbl-stratio-preprod-pvt-subnets\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "vgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.110.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "vgw-0c4edf925782ce2de",
            "id": "r-rtb-056073e2b9b18c82220590921",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056073e2b9b18c822",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this",
            "module.vpn_connection.aws_customer_gateway.cgw",
            "module.vpn_connection.aws_vpn_connection.vpn",
            "module.vpn_connection.aws_vpn_connection_route.stratio-servers",
            "module.vpn_connection.aws_vpn_connection_route.stratio-vpn",
            "module.vpn_connection.aws_vpn_gateway.vgw",
            "module.vpn_connection.fortios_firewall_address.address",
            "module.vpn_connection.fortios_firewall_policy.rule1",
            "module.vpn_connection.fortios_firewall_policy.rule2",
            "module.vpn_connection.fortios_firewall_policy.rule3",
            "module.vpn_connection.fortios_firewall_policy.rule4",
            "module.vpn_connection.fortios_router_static.static_route1",
            "module.vpn_connection.fortios_router_static.static_route2",
            "module.vpn_connection.fortios_vpnipsec_phase1interface.vpn1_phase1",
            "module.vpn_connection.fortios_vpnipsec_phase1interface.vpn2_phase1",
            "module.vpn_connection.fortios_vpnipsec_phase2interface.vpn1_phase2_1",
            "module.vpn_connection.fortios_vpnipsec_phase2interface.vpn1_phase2_2",
            "module.vpn_connection.fortios_vpnipsec_phase2interface.vpn2_phase2_1",
            "module.vpn_connection.fortios_vpnipsec_phase2interface.vpn2_phase2_2",
            "module.vpn_connection.random_integer.random_number1",
            "module.vpn_connection.random_integer.random_number2",
            "module.vpn_connection.random_integer.random_number3",
            "module.vpn_connection.random_integer.random_number4",
            "module.vpn_connection.random_password.preshared_key"
          ]
        }
      ]
    },
    {
      "module": "module.public_routes[\"rtbl-stratio-preprod-pub-subnets\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c7aea50f6634c9bc",
            "id": "r-rtb-0faa8712565ce4e851080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0faa8712565ce4e85",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Internet_Gateway.aws_internet_gateway.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_private[\"association_1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ee46ebe910ab8b2",
            "route_table_id": "rtb-056073e2b9b18c822",
            "subnet_id": "subnet-0aeb6413dbee5bd50"
          },
          "dependencies": [
            "module.Private_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_private[\"association_2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd9806596700f768",
            "route_table_id": "rtb-056073e2b9b18c822",
            "subnet_id": "subnet-075903de08488b84b"
          },
          "dependencies": [
            "module.Private_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_public[\"association_1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c6c34b47e284875",
            "route_table_id": "rtb-0faa8712565ce4e85",
            "subnet_id": "subnet-0152a5f18b9dd311d"
          },
          "dependencies": [
            "module.Public_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_public[\"association_2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0260a3184911c3b42",
            "route_table_id": "rtb-0faa8712565ce4e85",
            "subnet_id": "subnet-0f8fae2f53519d5b8"
          },
          "dependencies": [
            "module.Public_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}